# Fable.Python

./: .editorconfig  .fantomasignore  .gitignore  .release-please-manifest.json  AGENTS.md  BINDINGS_GUIDE.md  Build.fs  Build.fsproj  CHANGELOG.md  CLAUDE.md  Fable.Python.sln  Helpers.fs  JSON.md  LICENSE  README.md  RELEASING.md  justfile  memory.json  paket.dependencies  paket.references  pyproject.toml  release-please-config.json
.claude/: settings.json
.config/: dotnet-tools.json
.github/: dependabot.yml
.github/workflows/: build-and-test.yml  conventional-pr-title.yml  copilot-setup-steps.yml  publish.yml  release-please.yml  repo-assist.lock.yml  repo-assist.md
docs/: .buildinfo  genindex.html  index.html  intro.html  markdown.html  notebooks.html  objects.inv  search.html  searchindex.js
docs-src/: _config.yml  _toc.yml  index.md  intro.md  requirements.txt
docs-src/2-steps/: setup.md  your-first-fable-project.md
docs-src/communicate/: fable-from-py.md  py-from-fable.md
docs-src/dotnet/: compatibility.md  numbers.md
docs-src/introduction/: dotnet-users-read-this.md  py-users-read-this.md
docs-src/new-to-fsharp/: learning-the-language.md  let-keyword.md
docs-src/your-fable-project/: author-a-fable-library.md  build-and-run.md  project-file.md  testing.md  use-a-fable-library.md
docs/2-steps/: setup.html  your-first-fable-project.html
docs/_sources/: index.md  notebooks.ipynb
docs/_sources/communicate/: fable-from-py.md  py-from-fable.md
docs/_sources/dotnet/: compatibility.md  numbers.md
docs/_sources/introduction/: dotnet-users-read-this.md
docs/_sources/your-fable-project/: author-a-fable-library.md  project-file.md
docs/communicate/: fable-from-py.html  py-from-fable.html
docs/dotnet/: compatibility.html  numbers.html
docs/introduction/: dotnet-users-read-this.html  py-users-read-this.html
docs/new-to-fsharp/: learning-the-language.html  let-keyword.html
docs/your-fable-project/: author-a-fable-library.html  build-and-run.html  project-file.html  testing.html  use-a-fable-library.html
examples/: README.md  paket.dependencies
examples/django/: .gitignore  Django.fsproj  Manage.fs  Program.fs  README.md  paket.references  requirements.txt
examples/django-minimal/: Program.fs  README.md
examples/django/tproj/: Asgi.fs  Settings.fs  Urls.fs  Wsgi.fs
examples/fastapi/: .gitignore  App.fs  FastApi.fsproj  Models.fs  PydanticExample.fsproj  README.md
examples/files/: .gitignore  build.sh
examples/files/src/: Files.fsproj  Program.fs
examples/flask/: App.fs  Flask.fsproj  README.md  build.sh  paket.dependencies  paket.references  pyproject.toml  requirements.txt
examples/flask/src/: App.fs  Flask.fsproj  Head.fs  Hero.fs  Model.fs  NavBar.fs  paket.references
examples/giraffe/: Build.fs  Build.fsproj  Core.fs  FormatExpressions.fs  Giraffe.Python.fsproj  Giraffe.fsproj  Helpers.fs  HttpContext.fs  HttpHandler.fs  Middleware.fs  Program.fs  README.md  Routing.fs  ShortGuid.fs  giraffe.sln  pyproject.toml
examples/giraffe/src/: Core.fs  FormatExpressions.fs  Giraffe.Python.fsproj  Helpers.fs  HttpContext.fs  HttpHandler.fs  Middleware.fs  Program.fs  Routing.fs
examples/giraffe/test/: Giraffe.Tests.fsproj  Helpers.fs  TestRouting.fs  Util.fs
examples/microbit/: App.fs  Build.fs  Build.fsproj  Helpers.fs  MicroBit.fsproj  README.md  paket.dependencies  paket.references
examples/microbit/src/: App.fs  MicroBit.fsproj  app.py  paket.references  types.py  util.py
examples/pydantic/: .gitignore  App.fs  Models.fs  PydanticExample.fsproj  README.md  models.py
examples/scripts/: .gitignore  README.md  app.py  flask_sample.fsx  flask_sample.py  run_flask_app.fsx
examples/scripts/.config/: dotnet-tools.json
examples/timeflies/: Program.fs  README.md  TimeFlies.fsproj  paket.references  pyproject.toml
flask/: Fable.Python.Flask.fsproj  Flask.fs
spike/scriptorium/: Main.fs  README.md  Spike.fsproj
src/: Ast.fs  Builtins.fs  Fable.Python.fsproj  Json.fs  Os.fs  paket.references  pyproject.toml
src/cognite-sdk/: CogniteSdk.fs
src/fable/: Testing.fs  Types.fs
src/fastapi/: FastAPI.fs  README.md
src/flask/: Flask.fs  README.md
src/jupyter/: IPyWidgets.fs  IPython.fs
src/microbit/: MicroBit.fs  Speach.fs
src/pydantic/: Pydantic.fs
src/stdlib/: Ast.fs  Base64.fs  Builtins.fs  Collections.fs  Datetime.fs  Functools.fs  Heapq.fs  Html.fs  Itertools.fs  Json.fs  Logging.fs  Math.fs  Os.fs  Pathlib.fs  Queue.fs  Random.fs  Regex.fs  String.fs  Sys.fs  Threading.fs  Time.fs  TkInter.fs  Traceback.fs
src/stdlib/asyncio/: Builder.fs  ContextManager.fs  Events.fs  Futures.fs  Tasks.fs
src/testing/: Testing.fsproj  XUnit.fs  paket.references
stdlib/: Builtins.fs  Os.fs  pyproject.toml
test/: Fable.Python.Test.fsproj  Main.fs  TestAst.fs  TestAsyncIO.fs  TestBase64.fs  TestBuiltins.fs  TestBuiltinsAttr.fs  TestCollections.fs  TestDatetime.fs  TestFastAPI.fs  TestFunctools.fs  TestHeapq.fs  TestHtml.fs  TestItertools.fs  TestJson.fs  TestLogging.fs  TestMath.fs  TestOs.fs  TestPathlib.fs  TestPydantic.fs  TestQueue.fs  TestRandom.fs  TestRegex.fs  TestString.fs  TestSys.fs  TestTesting.fs  TestThreading.fs  TestTime.fs  TestTraceback.fs  TestTypes.fs  Util.fs  paket.references
