[project]
name = "Fable.Python"
version = "4.4.0"
description = "Fable"
authors = [{ name = "Dag Brattli", email = "dag@brattli.net" }]
requires-python = ">= 3.10, < 4.0"
readme = "README.md"
license = "MIT"

[project.urls]
Homepage = "https://fable.io"

[dependency-groups]
dev = [
    "pytest>=6.2.4,<7",
    "black>=24.3.0,<25",
    "jupyter-book>=0.13.1,<0.14",
]

[tool.pyright]
reportMissingTypeStubs = false
reportMissingImports = false
reportUnnecessaryTypeIgnoreComment = true
reportUnusedImport = true
reportUnusedVariable = true
reportUnnecessaryIsInstance = true
reportUnnecessaryComparison = true
reportUnnecessaryCast = true
reportPrivateUsage = true
reportImportCycles = true
reportDuplicateImport = true
reportConstantRedefinition = true
reportOverlappingOverload = true
reportInconsistentConstructor = true
reportImplicitStringConcatenation = true
pythonVersion = "3.10"
typeCheckingMode = "basic"
