[project]
name = "Fable.Python"
version = "0.0.0"
description = "Fable"
authors = [{ name = "Dag Brattli", email = "dag@brattli.net" }]
requires-python = ">= 3.12, < 4"
readme = "README.md"
license = "MIT"
dependencies = [
    "fable-library==5.0.0",
    "pyright>=1.1.409",
]

[project.urls]
Homepage = "https://fable.io"

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "ruff>=0.15.12",
    "pydantic>=2.13.3",
    "httpx>=0.28.1",
    "fastapi>=0.136.1",
]

# Example dependency groups
flask = [
    "Flask>=3.1.2,<4",
]
django = [
    "Django>=4.2,<5",
]
fastapi = [
    "fastapi>=0.136.1",
    "pydantic>=2.13.3",
    "uvicorn[standard]>=0.46.0",
]

# Meta-group that includes all example dependencies
examples = [
    { include-group = "flask" },
    { include-group = "django" },
    { include-group = "fastapi" },
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "C4",     # flake8-comprehensions
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pyright]
# Type-check the Fable-generated Python bindings in build/stdlib so the shipped
# output stays clean for downstream pyright users (see issue #278).
include = ["build/stdlib"]
reportMissingTypeStubs = false
reportMissingImports = false
reportUnnecessaryTypeIgnoreComment = true
# Disabled: Fable emits unused `UNIT` imports and single-occurrence TypeVars
# from F# generics. Those are codegen artifacts, not bindings bugs.
reportUnusedImport = false
reportInvalidTypeVarUse = false
reportUnusedVariable = true
reportUnnecessaryIsInstance = true
reportUnnecessaryComparison = true
reportUnnecessaryCast = true
reportPrivateUsage = true
reportImportCycles = true
reportDuplicateImport = true
reportConstantRedefinition = true
reportOverlappingOverload = true
reportInconsistentConstructor = true
reportImplicitStringConcatenation = true
pythonVersion = "3.12"
typeCheckingMode = "standard"
