
[tool.poetry]
name = "fable-python"
version = "0.18.0"
description = "Python bindings for Fable"
authors = ["Dag Brattli <dag@brattli.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">= 3.10, < 4.0"
fable-library = ">=0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
