[project]
name = "fable-python"
version = "0.19.0"
description = "Python bindings for Fable"
authors = [{ name = "Dag Brattli", email = "dag@brattli.net" }]
requires-python = ">= 3.10, < 4.0"
license = "MIT"
dependencies = ["fable-library>=0.8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

