[project]
name = "fable-python"
version = "0.19.0"
description = "Python bindings for Fable"
authors = [{ name = "Dag Brattli", email = "dag@brattli.net" }]
requires-python = ">= 3.12, < 4.0"
license = "MIT"
dependencies = ["fable-library>=5.0.0,<6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

