
[project]
name = "timeflies"
version = "0.1.0"
description = "Fable Timeflies Demo"
authors = [{ name = "Dag Brattli", email = "dag@brattli.net" }]
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fable-library>=0.8.0",
    #"fable-python",
    #"fsharp-control-async-rx",
]

[dependency-groups]
dev = [
    "black>=24.3.0",
    #"fable-python",
    #"fsharp-control-async-rx",
]
